# My_Agent

./: .gitignore  AGENT_SYSTEM_PROMPT.md  E2E_TEST_PROMPTS.md  OLLAMA_INTEGRATION_PROMPT.md  README.md  e2e_runner.py  pyproject.toml
src/myagent/: __init__.py  __main__.py
src/myagent/core/: __init__.py  config.py  models.py
src/myagent/engine/: __init__.py  intent.py  react.py
src/myagent/evolution/: __init__.py  manager.py
src/myagent/memory/: __init__.py  base.py  conversation.py  longterm.py  manager.py  working.py
src/myagent/providers/: __init__.py  base.py  ollama.py  openai_compat.py  qwen.py  registry.py  zhipu.py
src/myagent/safety/: __init__.py  checker.py
src/myagent/sessions/: __init__.py  manager.py
src/myagent/tools/: __init__.py  base.py
src/myagent/tools/builtins/: __init__.py  bash_tool.py  file_tool.py  glob_tool.py  grep_tool.py
src/myagent/ui/: __init__.py  terminal.py
