[project]
name = "myagent"
version = "0.1.0"
description = "高效的终端 AI 编程助手 — 文件读写、CLI 执行、记忆存储、自我进化"
readme = "../AGENT_SYSTEM_PROMPT.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.60.0",
    "pydantic>=2.10.0",
    "rich>=13.9.0",
    "prompt-toolkit>=3.0.48",
    "pyyaml>=6.0.2",
    "aiofiles>=24.1.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
myagent = "myagent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myagent"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.isort]
known-first-party = ["myagent"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
